--- a/Pages/AddLanding.razor
+++ b/Pages/AddLanding.razor
@@ -1,4 +1,5 @@
 ﻿@page "/addlanding"
+@inject LandingService _landingService
 
 <h1>Добавить плавку в очередь</h1>
 
@@ -10,6 +11,16 @@
             <InputText id="meltNum" class="form-control" placeholder="номер плавки" @bind-Value="@_landingData.MeltNumber" />
         </div>
         <div class="form-group col-md-1">
+            <label for="ingotsCount">Кол-во заготовок</label>
+            <InputNumber id="ingotsCount" class="form-control" placeholder="количество заготовок" @bind-Value="@_landingData.IngotsCount" />
+        </div>
+        <div class="form-group col-md-auto">
+            <label for="ingotLength">Длина заготовки (мм)</label>
+            <InputNumber id="ingotLength"  class="form-control" placeholder="длина заготовки" @bind-Value="@_landingData.IngotLenght" />
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-1">
             <label for="steelMark">Марка стали</label>
             <InputSelect class="form-control" id="steelMark" @bind-Value="@_landingData.SteelMark">
                 @foreach (string item in _steels)
@@ -19,23 +30,13 @@
             </InputSelect>
         </div>
         <div class="form-group col-md-1">
-            <label for="profile">Сечение</label>
-            <InputSelect class="form-control" id="profile" @bind-Value="@_landingData.IngotProfile">
+            <label for="profileData">Сечение</label>
+            <InputSelect class="form-control" id="profileData" @bind-Value="@_landingData.IngotProfile">
                 @foreach (string item in _profiles)
                 {
                     <option value="@item">@item</option>
                 }
             </InputSelect>
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-1">
-            <label for="ingotsCount">Кол-во заготовок</label>
-            <InputNumber id="ingotsCount" class="form-control" placeholder="количество заготовок" @bind-Value="@_landingData.IngotsCount" />
-        </div>
-        <div class="form-group col-md-1">
-            <label for="ingotLength">Длина заготовки</label>
-            <InputNumber id="ingotLength"  class="form-control" placeholder="длина заготовки" @bind-Value="@_landingData.IngotLenght" />
         </div>
         <div class="form-group col-md-1">
             <label for="weightOne">Вес заготовки</label>
@@ -57,7 +58,7 @@
                 </InputSelect>
         </div>
         <div class="form-group col-md-1">
-            <label for="gost">Гост</label>
+            <label for="gost">Стандарт</label>
             <InputSelect id="gost" class="form-control" @bind-Value="@_landingData.Gost">
                 @foreach (string item in _gosts)
                 {
@@ -72,8 +73,8 @@
             <InputNumber id="diameter" class="form-control" placeholder="диаметр" @bind-Value="@_landingData.Diameter" />
         </div>
         <div class="form-group col-md-1">
-            <label for="shift">Смена</label>
-            <InputText id="shift" class="form-control" placeholder="смена" @bind-Value="@_landingData.Shift" />
+            <label for="shift">Бригада</label>
+            <InputText id="shift" class="form-control" placeholder="бригада" @bind-Value="@_landingData.Shift" />
         </div>
         <div class="form-group col-md-1">
             <label for="class">Класс</label>
@@ -215,6 +216,6 @@
     </EditForm>
 </div>
 
-<div id="state" class="@_state" role="alert" style="display: @_show;">
+<div id="state" class="@_messageClass" role="alert" style="display: @_messageVisible;">
     @_message
 </div>
