--- a/Pages/EditLandingData.razor
+++ b/Pages/EditLandingData.razor
@@ -8,7 +8,7 @@
     <div class="form-row">
         <div class="form-group col-md-1">
             <label for="meltNum">Плавка №</label>
-            <InputText id="meltNum" class="form-control" placeholder="номер плавки" @bind-Value="@_editData.PlavNum" />
+            <InputText id="meltNum" class="form-control" placeholder="номер плавки" @bind-Value="@_editData.MeltNumber" />
         </div>
         <div class="form-group col-md-1">
             <label for="ingotsCount">Кол-во заготовок</label>
@@ -22,7 +22,7 @@
     <div class="form-row">
         <div class="form-group col-md-1">
             <label for="steelMark">Марка стали</label>
-            <InputSelect class="form-control" id="steelMark" @bind-Value="@_editData.Steel">
+            <InputSelect class="form-control" id="steelMark" @bind-Value="@_editData.SteelMark">
                 @foreach (string item in _steels)
                 {
                     <option value="@item">@item</option>
@@ -31,7 +31,7 @@
         </div>
         <div class="form-group col-md-1">
             <label for="profileData">Сечение</label>
-            <InputSelect class="form-control" id="profileData" @bind-Value="@_editData.Profile">
+            <InputSelect class="form-control" id="profileData" @bind-Value="@_editData.IngotProfile">
                 @foreach (string item in _profiles)
                 {
                     <option value="@item">@item</option>
@@ -59,7 +59,7 @@
         </div>
         <div class="form-group col-md-1">
             <label for="gost">Стандарт</label>
-            <InputSelect id="gost" class="form-control" @bind-Value="@_editData.Gost">
+            <InputSelect id="gost" class="form-control" @bind-Value="@_editData.Standart">
                 @foreach (string item in _gosts)
                 {
                     <option value="@item">@item</option>
@@ -78,7 +78,7 @@
         </div>
         <div class="form-group col-md-1">
             <label for="class">Класс</label>
-            <InputSelect id="gost" class="form-control" @bind-Value="@_editData.Class">
+            <InputSelect id="gost" class="form-control" @bind-Value="@_editData.IngotClass">
                 @foreach (string item in _classes)
                 {
                     <option value="@item">@item</option>
