--- a/Pages/EditLandingData.razor
+++ b/Pages/EditLandingData.razor
@@ -16,7 +16,7 @@
         </div>
         <div class="form-group col-md-auto">
             <label for="ingotLength">Длина заготовки (мм)</label>
-            <InputNumber id="ingotLength"  class="form-control" placeholder="длина заготовки" @bind-Value="@_editData.IngotLength" />
+            <InputNumber id="ingotLength" class="form-control" placeholder="длина заготовки" @bind-Value="@_editData.IngotLength" />
         </div>
     </div>
     <div class="form-row">
@@ -88,7 +88,7 @@
     </div>
     <div class="form-row">
         <div class="form-group col-md-1">
-            <button type="button" class="btn btn-success" @onclick="@(() => EditLanding())">Добавить в очередь</button>
+            <button type="button" class="btn btn-success" @onclick="@(() => EditLanding())">Сохранить изменения</button>
         </div>
     </div>
 </EditForm>
