Before insert changes into index page layout

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -7,22 +7,22 @@
     <div style="FONT-WEIGHT: 500; border: 1px solid @_semaphoreColor; border-radius: 50px; background-color: @_semaphoreColor; height: 50%; width: 10px; padding-left: 25px; margin-left: 15px; margin-top: 15px;">&nbsp;</div>
 </div>
 
-<div>
+<div id="scrollTable">
     <table class="table table-hover">
         <caption>Очередь заготовок на посаде печи</caption>
         <thead>
         <tr>
             @* <th scope="col">№<br />посада</th> *@
-            <th scope="col" style="vertical-align: middle">№<br />плавки</th>
-            <th scope="col" style="vertical-align: middle">Марка<br />стали</th>
+            <th scope="col" style="vertical-align: middle">№<br/>плавки</th>
+            <th scope="col" style="vertical-align: middle">Марка<br/>стали</th>
             <th scope="col" style="vertical-align: middle">Диаметр</th>
             <th scope="col" style="vertical-align: middle">Код продукции</th>
-            <th scope="col" style="vertical-align: middle">Сечение<br />заготовки</th>
-            <th scope="col" style="vertical-align: middle">Количество<br />заготовок</th>
-            <th scope="col" style="vertical-align: middle">Взвешено<br />бунтов</th>
-            <th scope="col" style="vertical-align: middle">Общий вес<br />заготовок</th>
-            <th scope="col" style="vertical-align: middle">Вес одной<br />заготовки</th>
-            <th scope="col" style="vertical-align: middle">Длина (мм)<br />заготовки</th>
+            <th scope="col" style="vertical-align: middle">Сечение<br/>заготовки</th>
+            <th scope="col" style="vertical-align: middle">Количество<br/>заготовок</th>
+            <th scope="col" style="vertical-align: middle">Взвешено<br/>бунтов</th>
+            <th scope="col" style="vertical-align: middle">Общий вес<br/>заготовок</th>
+            <th scope="col" style="vertical-align: middle">Вес одной<br/>заготовки</th>
+            <th scope="col" style="vertical-align: middle">Длина (мм)<br/>заготовки</th>
             <th scope="col" style="vertical-align: middle" colspan="2">Количество</th>
             <th scope="col" style="vertical-align: middle" colspan="2">Порядок</th>
             <th scope="col" style="vertical-align: middle">Правка</th>
@@ -48,8 +48,8 @@
                 <td><button class="btn btn-primary" @onclick="@(() => DecLanding(item.LandingId))">&minus;</button></td>
                 @if (item.Weighted > 0)
                 {
-                    @* <td><button class="btn btn-primary" disabled @onclick="@(() => MoveUp(item.LandingId))">&uarr;</button></td> *@
-                    @* <td><button class="btn btn-primary" disabled @onclick="@(() => MoveDown(item.LandingId))">&darr;</button></td> *@
+                                @* <td><button class="btn btn-primary" disabled @onclick="@(() => MoveUp(item.LandingId))">&uarr;</button></td> *@
+                                @* <td><button class="btn btn-primary" disabled @onclick="@(() => MoveDown(item.LandingId))">&darr;</button></td> *@
                     <td>&nbsp;</td>
                     <td>&nbsp;</td>
                 }
@@ -58,11 +58,11 @@
                     <td><button class="btn btn-primary" @onclick="@(() => MoveUp(item.LandingId))">&uarr;</button></td>
                     <td><button class="btn btn-primary" @onclick="@(() => MoveDown(item.LandingId))">&darr;</button></td>
                 }
-                
+
                 <td><button class="btn btn-primary" @onclick="@(() => EditLanding(item.LandingId))">&#128736;</button></td>
                 @if (item.Weighted > 0)
                 {
-                    @* <td><button class="btn btn-primary" disabled @onclick="@(() => Remove(item.LandingId))">&times;</button></td> *@
+                                @* <td><button class="btn btn-primary" disabled @onclick="@(() => Remove(item.LandingId))">&times;</button></td> *@
                     <td>&nbsp;</td>
                 }
                 else
@@ -74,6 +74,7 @@
         </tbody>
     </table>
 </div>
+
 
 
 <div id="state" class="@_messageClass" role="alert" style="display: @_messageVisible;">
